--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Himana123.github.io/fitness-app",
+  "homepage": "https://Himana123.github.io/Fitness-test",
   "name": "fitness-test",
   "version": "0.1.0",
   "private": true,
